# NeptR

./: NeptR_model.sdf  Neptr Micro Prototype REV2.step  README.md  walking.cxx
leg_control/: CMakeLists.txt  package.xml
leg_control/launch/: gazebo_launch.py
leg_control/src/: leg_control_node.py
log/: latest_build
neptr_desc/launch/: neptr_launch.py
neptr_desc/model/meshes/: foot_link.stl
neptr_desc/model/model/: neptr_sdf
neptr_desc/model/sdf/: neptr_sdf
neptr_desc/src/: leg_control.py  leg_controller.py
ros2_ws2-main/neptr_description/share/ament_index/resource_index/package_run_dependencies/: neptr_description
ros2_ws2-main/neptr_description/share/ament_index/resource_index/parent_prefix_path/: neptr_description
ros2_ws2-main/neptr_description/share/launch/: view_neptr.launch.py
ros2_ws2-main/neptr_description/share/neptr_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws2-main/neptr_description/share/neptr_description/cmake/: neptr_descriptionConfig.cmake
ros2_ws2-main/neptr_description/share/neptr_description/launch/: neptr_control.launch  view_neptr.launch.py
ros2_ws2-main/neptr_description/share/neptr_description/urdf/: neptr.urdf  neptr.urdf.xacro  robot_core.xacro
ros2_ws2-main/neptr_description/share/urdf/: neptr.urdf.xacro
