<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neptr_description</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for the bipedal walking robot Neptr.</description>
  <maintainer email="b.k.arthur@live.com">Arthur</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>urdf</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>